Check 2: Use Case "manage availability"